# UxPlay

./: CMakeLists.txt  uxplay.cpp
lib/: CMakeLists.txt  airplay_video.c  airplay_video.h  fcup_request.h  http_handlers.h  httpd.c  httpd.h  raop.c  raop.h  raop_handlers.h  raop_rtp_mirror.c  stream.h
lib/hlsparse/: LICENSE
lib/media_data_store/: MediaDataStore.cpp  MediaDataStore.h
renderers/: CMakeLists.txt  video_renderer.h  video_renderer_gstreamer.c
